# DesignPattern

./: CMakeLists.txt
observer/: FileSplitter.cpp  FileSplitter.h  FileSplitter1.cpp  FileSplitter1.h  MainForm.cpp  MainForm.h  ProgressBar.cpp  ProgressBar.h
